--- a/interview_1_exmpl.ipynb
+++ b/interview_1_exmpl.ipynb
@@ -257,8 +257,8 @@
    "outputs": [],
    "source": [
     "# write a CSV file to a DataFrame object\n",
-    "mt5_deals = pd.read_csv(r\"C:\\Users\\fekuz\\OneDrive\\Документы\\Gleb\\Work\\Serbia\\Data-Driven Lab\\mt5_deals.csv\", sep = ',')\n",
-    "mt5_marked_trades = pd.read_csv(r\"C:\\Users\\fekuz\\OneDrive\\Документы\\Gleb\\Work\\Serbia\\Data-Driven Lab\\mt5_marked_trades.csv\", sep = ',')"
+    "mt5_deals = pd.read_csv(r\"interview_1_exmpl_mt5_deals.csv\", sep = ',')\n",
+    "mt5_marked_trades = pd.read_csv(r\"interview_1_exmpl_mt5_marked_trades.csv\", sep = ',')"
    ]
   },
   {
